--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "action": {
     "default_icon": "./icons/icon.png",
     "default_title": "Pop-a-loon",
-    "default_popup": "index.html"
+    "default_popup": "./src/popup/index.html"
   },
   "content_scripts": [
     {
