--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "pop-a-loon",
   "version": "1.0.0",
   "description": "A fun Chrome extension that lets balloons rise on your screen",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-dev": "webpack --mode development",
+    "build-dev-watch": "webpack --mode development --watch",
+    "build-production": "webpack --mode production"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +16,11 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@types/chrome": "^0.0.259"
+    "@types/chrome": "^0.0.259",
+    "css-loader": "^6.9.1",
+    "style-loader": "^3.3.4",
+    "ts-loader": "^9.5.1",
+    "webpack": "^5.90.0",
+    "webpack-cli": "^5.1.4"
   }
 }
