--- a/manifest.json
+++ b/manifest.json
@@ -21,6 +21,10 @@
     },
     {
       "matches": ["<all_urls>"],
+      "resources": ["resources/audio/pop.mp3"]
+    },
+    {
+      "matches": ["<all_urls>"],
       "resources": ["src/content/style.css"]
     }
   ],
