--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/chrome": "^0.0.259",
     "css-loader": "^6.9.1",
+    "html-webpack-plugin": "^5.6.0",
     "style-loader": "^3.3.4",
     "ts-loader": "^9.5.1",
     "webpack": "^5.90.0",
