Set package.json licence to Apache-2.0

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build-production": "webpack --mode production"
   },
   "author": "",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "dependencies": {
     "chrome-types": "^0.1.253",
     "typescript": "^5.3.3"
