--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
   "license": "Apache-2.0",
   "dependencies": {
     "chrome-types": "^0.1.253",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.259",
+    "@types/react": "^18.2.52",
+    "@types/react-dom": "^18.2.18",
     "css-loader": "^6.9.1",
     "html-webpack-plugin": "^5.6.0",
     "style-loader": "^3.3.4",
