--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chrome-types": "^0.1.253",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
