--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "chrome-types": "^0.1.253",
+    "postcss-loader": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
@@ -25,9 +26,12 @@
     "@types/chrome": "^0.0.259",
     "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
-    "css-loader": "^6.9.1",
+    "autoprefixer": "^10.4.17",
+    "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
+    "postcss": "^8.4.33",
     "style-loader": "^3.3.4",
+    "tailwindcss": "^3.4.1",
     "ts-loader": "^9.5.1",
     "webpack": "^5.90.0",
     "webpack-cli": "^5.1.4"
