--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
     "postcss": "^8.4.33",
+    "prettier": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "style-loader": "^3.3.4",
     "tailwindcss": "^3.4.1",
     "ts-loader": "^9.5.1",
