--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "autoprefixer": "^10.4.17",
     "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
+    "husky": "^9.0.10",
+    "lint-staged": "^15.2.1",
     "postcss": "^8.4.33",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
