--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Pop-a-loon",
   "version": "1.3.1",
   "description": "A fun Chrome extension that lets balloons rise on your screen",
-  "permissions": ["storage", "activeTab", "scripting"],
+  "permissions": ["storage"],
   "icons": {
     "16": "./resources/icons/icon-16.png",
     "24": "./resources/icons/icon-24.png",
