--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "chrome-types": "^0.1.253",
     "clsx": "^2.1.0",
+    "js-abbreviation-number": "^1.4.0",
     "postcss-loader": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
