Add icon as web accessible recource close #39

--- a/manifest.json
+++ b/manifest.json
@@ -44,6 +44,15 @@
       "resources": [
         "resources/audio/pop.mp3"
       ]
+    },
+    {
+      "matches": [
+        "https://*/*",
+        "http://*/*"
+      ],
+      "resources": [
+        "resources/icons/icon-128.png"
+      ]
     }
   ],
   "background": {
