--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-dev": "webpack --mode development",
-    "build-dev-watch": "webpack --mode development --watch",
-    "build-production": "webpack --mode production",
+    "dev": "webpack --mode development",
+    "dev-watch": "webpack --mode development --watch",
+    "build": "webpack --mode production",
     "prepare": "husky"
   },
   "author": "",
