Simplify web accessable resources in manifest close #51

--- a/manifest.json
+++ b/manifest.json
@@ -42,16 +42,7 @@
         "http://*/*"
       ],
       "resources": [
-        "resources/audio/pop.mp3"
-      ]
-    },
-    {
-      "matches": [
-        "https://*/*",
-        "http://*/*"
-      ],
-      "resources": [
-        "resources/icons/icon-128.png"
+        "resources/**/*"
       ]
     }
   ],
