--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "style-loader": "^3.3.4",
     "tailwindcss": "^3.4.1",
     "ts-loader": "^9.5.1",
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
     "webpack": "^5.90.0",
     "webpack-cli": "^5.1.4"
   }
