--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev": "webpack --mode development",
     "dev-watch": "webpack --mode development --watch",
     "build": "webpack --mode production",
+    "start": "nodemon ./api/index.ts",
+    "start-prod": "node ./api/index.ts",
     "prepare": "husky"
   },
   "author": "",
@@ -35,20 +37,26 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/chrome": "^0.0.259",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.17",
     "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.0.10",
     "lint-staged": "^15.2.1",
+    "nodemon": "^3.1.0",
     "postcss": "^8.4.33",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "style-loader": "^3.3.4",
     "tailwindcss": "^3.4.1",
     "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "webpack": "^5.90.0",
     "webpack-cli": "^5.1.4"
