--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clsx": "^2.1.0",
     "express": "^4.18.3",
     "js-abbreviation-number": "^1.4.0",
+    "mongoose": "^8.2.1",
     "postcss-loader": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
