--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@types/node": "^20.11.25",
     "chrome-types": "^0.1.253",
     "clsx": "^2.1.0",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "js-abbreviation-number": "^1.4.0",
     "mongoose": "^8.2.1",
