--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slider": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "chrome-types": "^0.1.253",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
