--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,7 @@
   "version": "1.5.3",
   "description": "A fun Chrome extension that lets balloons rise on your screen",
   "permissions": [
-    "storage",
-    "activeTab"
+    "storage"
   ],
   "icons": {
     "16": "./resources/icons/icon-16.png",
