--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@types/firefox-webext-browser": "^120.0.3",
     "chrome-types": "^0.1.253",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
