--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "tailwindcss": "^3.4.1",
     "ts-loader": "^9.5.1",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
+    "webextension-polyfill": "^0.10.0",
     "webpack": "^5.90.0",
     "webpack-cli": "^5.1.4"
   }
