--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/chrome": "^0.0.259",
     "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
+    "@types/webextension-polyfill": "^0.10.7",
     "autoprefixer": "^10.4.17",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.10.0",
