--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/react-dom": "^18.2.18",
     "@types/webextension-polyfill": "^0.10.7",
     "autoprefixer": "^10.4.17",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.0.10",
