--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:chrome": "set BROWSER=chrome&& webpack --mode development",
-    "dev:firefox": "set BROWSER=firefox&& webpack --mode development",
-    "build:chrome": "set BROWSER=chrome&& webpack --mode production",
-    "build:firefox": "set BROWSER=firefox&& webpack --mode production",
+    "dev:chrome": "cross-env BROWSER=chrome webpack --mode development",
+    "dev:firefox": "cross-env BROWSER=firefox webpack --mode development",
+    "build:chrome": "cross-env BROWSER=chrome webpack --mode production",
+    "build:firefox": "cross-env BROWSER=firefox webpack --mode production",
     "prepare": "husky"
   },
   "author": "",
@@ -49,6 +49,7 @@
     "@types/webextension-polyfill": "^0.10.7",
     "autoprefixer": "^10.4.17",
     "copy-webpack-plugin": "^12.0.2",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.0.10",
