Update all manifest files to v3

--- a/manifest.firefox.json
+++ b/manifest.firefox.json
@@ -1,27 +1,11 @@
 {
-  "manifest_version": 2,
-  "browser_action": {
-    "default_icon": {
-      "16": "./resources/icons/icon-16.png",
-      "24": "./resources/icons/icon-24.png",
-      "32": "./resources/icons/icon-32.png",
-      "48": "./resources/icons/icon-48.png",
-      "128": "./resources/icons/icon-128.png"
-    },
-    "default_title": "Pop-a-loon",
-    "default_popup": "./popup.html"
-  },
+  "permissions": ["storage", "alarms", "scripting"],
   "background": {
-    "scripts": [
-      "./background.js"
-    ]
+    "scripts": ["./background.js"]
   },
   "browser_specific_settings": {
     "gecko": {
       "id": "pop-a-loon@pop-a-loon"
     }
-  },
-  "web_accessible_resources": [
-    "resources/*"
-  ]
+  }
 }
