--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/react-dom": "^18.2.18",
     "@types/webextension-polyfill": "^0.10.7",
     "autoprefixer": "^10.4.17",
+    "bestzip": "^2.2.1",
     "copy-webpack-plugin": "^12.0.2",
     "cross-env": "^7.0.3",
     "css-loader": "^6.10.0",
