Add mkdirp package to package.json

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev:chrome": "cross-env BROWSER=chrome webpack --mode development",
     "dev:firefox": "cross-env BROWSER=firefox webpack --mode development",
-    "_build:prepare": "mkdir -p build",
+    "_build:prepare": "mkdir build",
     "build:chrome": "cross-env BROWSER=chrome webpack --mode production",
     "build:chrome:zip": "npm run build:chrome && npm run _build:prepare && cd dist && bestzip ../build/pop-a-loon-chrome.zip * && cd ..",
     "build:firefox": "cross-env BROWSER=firefox webpack --mode production",
@@ -58,6 +58,7 @@
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.0.10",
     "lint-staged": "^15.2.1",
+    "mkdirp": "^3.0.1",
     "postcss": "^8.4.33",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
