--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,5 +3,15 @@
   // Hover to view descriptions of existing attributes.
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
-  "configurations": []
+  "configurations": [
+    {
+      "name": "Launch Chrome",
+      "request": "launch",
+      "type": "chrome",
+      "url": "https://google.com/",
+      "runtimeArgs": ["--load-extension=${workspaceFolder}/dist"],
+      "preLaunchTask": "npm: dev:chrome",
+      "postDebugTask": "stop node"
+    }
+  ]
 }
