--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,4 +1,25 @@
 {
   "version": "2.0.0",
-  "tasks": []
+  "tasks": [
+    {
+      "label": "npm: dev:chrome",
+      "type": "shell",
+      "command": "npm run dev:chrome -- --watch",
+      "isBackground": true,
+      "problemMatcher": {
+        "owner": "custom",
+        "pattern": {
+          "regexp": "^(.*)$"
+        },
+        "background": {
+          "activeOnStart": true,
+          "beginsPattern": "Compiling...",
+          "endsPattern": "compiled successfully"
+        }
+      },
+      "presentation": {
+        "reveal": "always"
+      }
+    }
+  ]
 }
