--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,7 @@
   "manifest_version": 3,
   "name": "Pop-a-loon",
   "description": "A fun Chrome extension that lets balloons rise on your screen",
-  "permissions": [
-    "storage",
-    "alarms"
-  ],
+  "permissions": ["storage", "alarms", "idle"],
   "icons": {
     "16": "./resources/icons/icon-16.png",
     "24": "./resources/icons/icon-24.png",
@@ -15,24 +12,14 @@
   },
   "content_scripts": [
     {
-      "matches": [
-        "https://*/*",
-        "http://*/*"
-      ],
-      "js": [
-        "./content.js"
-      ]
+      "matches": ["https://*/*", "http://*/*"],
+      "js": ["./content.js"]
     }
   ],
   "web_accessible_resources": [
     {
-      "matches": [
-        "https://*/*",
-        "http://*/*"
-      ],
-      "resources": [
-        "resources/**/*"
-      ]
+      "matches": ["https://*/*", "http://*/*"],
+      "resources": ["resources/**/*"]
     }
   ],
   "background": {
