Update .vscode/tasks.json with task for with and without remote #108

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,9 +2,9 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "npm: dev:chrome",
+      "label": "npm: dev:chrome:noremote",
       "type": "shell",
-      "command": "echo $pid > .pid; npm run dev:chrome -- --watch",
+      "command": "echo $pid > .pid; npm run dev:chrome:noremote -- --watch",
       "isBackground": true,
       "problemMatcher": {
         "owner": "custom",
@@ -22,9 +22,49 @@
       }
     },
     {
-      "label": "npm: dev:firefox",
+      "label": "npm: dev:chrome:remote",
       "type": "shell",
-      "command": "echo $pid > .pid; npm run dev:firefox -- --watch",
+      "command": "echo $pid > .pid; npm run dev:chrome:remote -- --watch",
+      "isBackground": true,
+      "problemMatcher": {
+        "owner": "custom",
+        "pattern": {
+          "regexp": "^(.*)$"
+        },
+        "background": {
+          "activeOnStart": true,
+          "beginsPattern": "Compiling...",
+          "endsPattern": "compiled successfully"
+        }
+      },
+      "presentation": {
+        "reveal": "always"
+      }
+    },
+    {
+      "label": "npm: dev:firefox:noremote",
+      "type": "shell",
+      "command": "echo $pid > .pid; npm run dev:firefox:noremote -- --watch",
+      "isBackground": true,
+      "problemMatcher": {
+        "owner": "custom",
+        "pattern": {
+          "regexp": "^(.*)$"
+        },
+        "background": {
+          "activeOnStart": true,
+          "beginsPattern": "Compiling...",
+          "endsPattern": "compiled successfully"
+        }
+      },
+      "presentation": {
+        "reveal": "always"
+      }
+    },
+    {
+      "label": "npm: dev:firefox:remote",
+      "type": "shell",
+      "command": "echo $pid > .pid; npm run dev:firefox:remote -- --watch",
       "isBackground": true,
       "problemMatcher": {
         "owner": "custom",
