Update build scripts to use rimraf for cleaning build artifacts close #127

--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "dev:firefox:noremote": "cross-env REMOTE=\"noremote\" BROWSER=firefox webpack --mode development",
     "_build:prepare": "mkdirp build",
     "build:chrome": "cross-env BROWSER=chrome webpack --mode production",
-    "build:chrome:zip": "npm run build:chrome && npm run _build:prepare && cd dist && bestzip ../build/pop-a-loon-chrome.zip * && cd ..",
+    "build:chrome:zip": "rimraf ./build/pop-a-loon-chrome.zip && npm run build:chrome && npm run _build:prepare && cd dist && bestzip ../build/pop-a-loon-chrome.zip * && cd ..",
     "build:firefox": "cross-env BROWSER=firefox webpack --mode production",
-    "build:firefox:zip": "npm run build:firefox && npm run _build:prepare && cd dist && bestzip ../build/pop-a-loon-firefox.zip * && cd ..",
+    "build:firefox:zip": "rimraf ./build/pop-a-loon-firefox.zip && npm run build:firefox && npm run _build:prepare && cd dist && bestzip ../build/pop-a-loon-firefox.zip * && cd ..",
     "prepare": "husky"
   },
   "author": "",
