--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "husky": "^9.0.10",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "lint-staged": "^15.2.1",
     "mkdirp": "^3.0.1",
     "postcss": "^8.4.33",
