--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "build:firefox:zip": "rimraf ./build/pop-a-loon-firefox.zip && npm run build:firefox && npm run _build:prepare && cd dist && bestzip ../build/pop-a-loon-firefox.zip * && cd ..",
     "prepare": "husky"
   },
-  "author": "",
+  "author": {
+    "name": "Simon Stijnen"
+  },
   "license": "Apache-2.0",
   "husky": {
     "hooks": {
