Run zip:source after preparing for build

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev:firefox": "npm run dev:firefox:noremote --",
     "dev:firefox:remote": "cross-env REMOTE=\"remote\" BROWSER=firefox webpack --mode development",
     "dev:firefox:noremote": "cross-env REMOTE=\"noremote\" BROWSER=firefox webpack --mode development",
-    "_build:prepare": "mkdirp build",
+    "_build:prepare": "mkdirp build && npm run zip:source",
     "build:chrome": "cross-env BROWSER=chrome webpack --mode production",
     "build:chrome:zip": "rimraf ./build/pop-a-loon-chrome.zip && npm run build:chrome && npm run _build:prepare && cd dist && bestzip ../build/pop-a-loon-chrome.zip * && cd ..",
     "build:firefox": "cross-env BROWSER=firefox webpack --mode production",
