--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "dev:firefox": "npm run dev:firefox:noremote --",
     "dev:firefox:remote": "cross-env REMOTE=\"remote\" BROWSER=firefox webpack --mode development",
     "dev:firefox:noremote": "cross-env REMOTE=\"noremote\" BROWSER=firefox webpack --mode development",
-    "_build:prepare": "mkdirp build && npm run zip:source",
+    "_build:prepare": "mkdirp build",
     "build:chrome": "cross-env BROWSER=chrome webpack --mode production",
     "build:chrome:zip": "rimraf ./build/pop-a-loon-chrome.zip && npm run build:chrome && npm run _build:prepare && cd dist && bestzip ../build/pop-a-loon-chrome.zip * && cd ..",
     "build:firefox": "cross-env BROWSER=firefox webpack --mode production",
     "build:firefox:zip": "rimraf ./build/pop-a-loon-firefox.zip && npm run build:firefox && npm run _build:prepare && cd dist && bestzip ../build/pop-a-loon-firefox.zip * && cd ..",
-    "zip:source": "git archive --format zip --output ./build/source.zip HEAD",
+    "zip:source": "npm run _build:prepare && node tasks/zip-source.js",
     "prepare": "husky"
   },
   "author": {
