Update @components path in components.json #158

--- a/components.json
+++ b/components.json
@@ -11,7 +11,7 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "components",
+    "components": "@/popup/components",
     "utils": "@utils"
   }
 }
