--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pop-a-loon",
   "version": "1.8.0",
-  "description": "A fun Chrome extension that lets balloons rise on your screen",
+  "description": "The new rising trend (literally) that changes the browser game completely.",
   "private": true,
   "scripts": {
     "test": "jest",
