--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
     "lint-staged": "^15.2.1",
+    "mini-css-extract-plugin": "^2.9.0",
     "mkdirp": "^3.0.1",
     "postcss": "^8.4.33",
     "prettier": "^3.2.5",
