--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "js-abbreviation-number": "^1.4.0",
+    "loglevel": "^1.9.1",
     "lucide-react": "^0.356.0",
     "postcss-loader": "^8.1.0",
     "react": "^18.2.0",
