--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,14 @@
 {
-  "plugins": ["prettier-plugin-tailwindcss"],
+  "plugins": ["prettier-plugin-tailwindcss", "prettier-plugin-sort-imports"],
   "semi": true,
   "singleQuote": true,
   "printWidth": 80,
   "tabWidth": 2,
   "useTabs": false,
   "endOfLine": "lf",
-  "trailingComma": "es5"
+  "trailingComma": "es5",
+  "sortingMethod": "alphabetical",
+  "stripNewlines": true,
+  "newlineBetweenTypes": false,
+  "importTypeOrder": ["NPMPackages", "localImportsType", "localImportsValue"]
 }
