Add workflow permissions #292

--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -49,6 +52,6 @@ jobs:
           for asset in ./build/*.zip; do
             assets+=("$asset")
           done
-          tag_name="test_v${{ env.VERSION }}"
+          tag_name="v${{ env.VERSION }}"
           gh release create --generate-notes --latest "$tag_name"
           gh release upload "$tag_name" "${assets[@]}"
