--- a/package.json
+++ b/package.json
@@ -47,11 +47,13 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "js-abbreviation-number": "^1.4.0",
     "loglevel": "^1.9.1",
     "lucide-react": "^0.356.0",
     "postcss-loader": "^8.1.0",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.1",
     "react-router-dom": "^6.22.0",
