--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -20,6 +20,15 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '21'
+          node-version: '21'
+
+      - name: Cache npm dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.OS }}-node-
 
       - name: Install GitHub CLI
         run: |
@@ -31,6 +40,7 @@ jobs:
           sudo apt install gh -y
 
       - name: Install dependencies
+        run: npm ci
         run: npm install
 
       - name: Build the project
