Update components.json close #359

--- a/components.json
+++ b/components.json
@@ -12,6 +12,9 @@
   },
   "aliases": {
     "components": "@/popup/components",
-    "utils": "@/utils"
+    "utils": "@/utils",
+    "ui": "@/components/ui",
+    "lib": "@/lib",
+    "hooks": "@/hooks"
   }
 }
